--- a/src/index.scss
+++ b/src/index.scss
@@ -52,3 +52,25 @@ a {
 .css-50etie svg circle {
   stroke: black;
 }
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+   color:    #b0b0b0 !important;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+  color:    #b0b0b0 !important;
+ opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+  color:    #b0b0b0 !important;
+ opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color:    #b0b0b0 !important;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+  color:    #b0b0b0 !important;
+}
+
+::placeholder { /* Most modern browsers support this now. */
+  color:    #b0b0b0 !important;
+}
